--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+/* --- DISABLE BLUE HIGHLIGHTING & GHOST DRAGGING --- */
+* {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none; /* Logic Saver */
+}
+
+/* INPUTS MUST BE SELECTABLE */
+input, textarea {
+    -webkit-user-select: text !important;
+    -moz-user-select: text !important;
+    -ms-user-select: text !important;
+    user-select: text !important;
+    cursor: text;
+}
+
+/* IMAGES PASS CLICKS THROUGH (DECORATIVE) */
+img {
+    pointer-events: none; 
+}
+
+/* !!! CRITICAL EXCEPTION: GAME CARDS !!! */
+/* This MUST be here or you cannot drag cards */
+.game-card, .player-card, .card-back, .opponent-card, .deck-area img {
+    pointer-events: auto !important;
+    cursor: grab;
+}
+
+.game-card:active {
+    cursor: grabbing;
+}
 /* =========================================
    1. GLOBAL VARIABLES (MERGED)
    ========================================= */
